--- a/ReactPortfolio/src/App.css
+++ b/ReactPortfolio/src/App.css
@@ -140,9 +140,23 @@ img {
 
 
 @media screen and (max-width: 992px) {
-
+  .container {
+    margin-left: 1.5rem;
+    margin-right: 1.5rem;
+  }
 }
 
 @media screen and (max-width: 768px) {
 
+}
+
+@media screen and (max-width: 576px) {
+
+}
+
+@media screen and (max-width: 350px) {
+  .container {
+    margin-left: 1rem;
+    margin-right: 1rem;
+  }
 }
