--- a/ReactPortfolio/src/components/Home.css
+++ b/ReactPortfolio/src/components/Home.css
@@ -5,14 +5,38 @@
     align-items: center;
 }
 
+@keyframes fadein {
+    0%{
+        transform: translateX(-200px);
+        opacity: 0%;
+        background-image: url(../assets/react.svg);
+    }
+    100%{
+        transform: translateX(0px);
+        opacity: 100%;
+        background-image: url(../assets/react.svg);
+    }
+    
+}
+
 .homeImg {
-    background: url(../assets/react.svg);
+
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
     width: 300px;
     height: 300px;
+
+    animation-name: fadein;
+    transition: 3s;
+
+    animation-play-state: running;
+    animation-timing-function: ease-in-out;
+    animation-duration: 3s;
+    animation-fill-mode: forwards;
+    animation-iteration-count: 1;
 }
+
 
 .homeTitle {
     font-size: var(--big-font);
@@ -22,4 +46,14 @@
 .homeSubtitle {
     position: relative;
     font-size: var(--h3-font);
+}
+
+.homeScroll {
+    margin-top: 7rem;
+    
+}
+
+.homeScrollArrow {
+    color: #0000EE;
+    font-size: 1rem;
 }
