--- a/ReactPortfolio/src/components/Skills.css
+++ b/ReactPortfolio/src/components/Skills.css
@@ -17,3 +17,12 @@
 .skillsTitle {
     margin-bottom: 1rem;
 }
+
+@media screen and (max-width: 350px) {
+    .skillsGroup {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        column-gap: 2rem;
+        align-items: center;
+    }
+}
