--- a/ReactPortfolio/src/components/Projects.css
+++ b/ReactPortfolio/src/components/Projects.css
@@ -24,6 +24,19 @@
     height: 100%;
 }
 
-@media screen and (max-width: 350px) {
+@media screen and (max-width: 576px) {
+    .projectTopBox {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        grid-template-rows: repeat(2, 1fr);
+        grid-column-gap: 2rem;
+    }
+    .projectTitle {
+        grid-area: 1 / 1 / 2/ 4;
+    }
 
+    .projectImg {
+        width: 100%;
+        height: 100%;
+    }
 }
