--- a/ReactPortfolio/src/components/Projects.css
+++ b/ReactPortfolio/src/components/Projects.css
@@ -38,5 +38,8 @@
     .projectImg {
         width: 100%;
         height: 100%;
+        grid-row-start: 2;
+        grid-row-end: 2;
+        
     }
 }
